--- a/movie-project.html
+++ b/movie-project.html
@@ -3,8 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <title>Movie Project</title>
+    <script src="movie-project.js"></script>
+    <link rel="stylesheet" href="movie-project.css">
 </head>
 <body>
 <h1>Movie Project</h1>
+<div class="loadingMessage">
+    <p>Loading...</p>
+</div>
+
+<div class="movieInfo"></div>
 </body>
 </html>
