--- a/movie-project.html
+++ b/movie-project.html
@@ -3,15 +3,27 @@
 <head>
     <meta charset="UTF-8">
     <title>Movie Project</title>
-    <script src="movie-project.js"></script>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+          integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="movie-project.css">
 </head>
 <body>
 <h1>Movie Project</h1>
-<div class="loadingMessage">
+
+
+<div class="loadingMessage" id="loading">
     <p>Loading...</p>
 </div>
 
-<div class="movieInfo"></div>
+
+
+
+<div class="movieInfo card-container"></div>
+
+
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
+<script src="https://code.jquery.com/jquery-2.2.4.min.js"
+        integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44=" crossorigin="anonymous"></script>
+<script src="movie-project.js"></script>
 </body>
 </html>
