--- a/movie-project.html
+++ b/movie-project.html
@@ -10,6 +10,20 @@
 <body>
 <h1>Movie Project</h1>
 
+<form action="" method="get" class="addMovieForm">
+    <div class="form-example">
+        <label for="movieTitle">Enter Movie Title: </label>
+        <input type="text" name="movieTitle" id="movieTitle" required>
+    </div>
+    <div class="form-example">
+        <label for="movieRating">Enter a Rating: </label>
+        <input type="number" name="movieRating" id="movieRating" required>
+    </div>
+    <div class="form-example">
+        <input type="submit" value="Add Movie">
+    </div>
+</form>
+
 
 <div class="loadingMessage" id="loading">
     <p>Loading...</p>
@@ -19,6 +33,8 @@
 
 
 <div class="movieInfo card-container"></div>
+
+
 
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
