add movie function working properly to add info to card display

--- a/movie-project.html
+++ b/movie-project.html
@@ -12,12 +12,12 @@
 
 <form id="postForm">
     <label>Title:</label>
-    <input type="text" name="title">
+    <input id="input" type="text" name="title">
     <br>
     <label>Rating</label>
-    <input type="number" name="rating">
+    <input id="input" type="number" name="rating">
     <br>
-    <button type="submit">Add Post</button>
+    <button type="submit">Add Movie</button>
 </form>
 
 
