starting delete function

--- a/movie-project.html
+++ b/movie-project.html
@@ -8,14 +8,14 @@
     <link rel="stylesheet" href="movie-project.css">
 </head>
 <body>
-<h1>Movie Project</h1>
+<h2>Movie Night</h2>
 
 <form id="postForm">
-    <label>Title:</label>
-    <input id="input" type="text" name="title">
+<!--    <label>Title:</label>-->
+    <input id="input" type="text" name="title" placeholder="Enter title">
     <br>
-    <label>Rating</label>
-    <input id="input" type="number" name="rating">
+<!--    <label>Rating</label>-->
+    <input id="input" type="number" name="rating" placeholder="Enter rating">
     <br>
     <button type="submit">Add Movie</button>
 </form>
