added new movie poster

--- a/movie-project.html
+++ b/movie-project.html
@@ -29,6 +29,9 @@
 <!--    <label>Rating</label>-->
     <input id="input" type="number" name="rating" placeholder="Enter rating">
     <br>
+    <input id="input" type="text" name="genre" placeholder="Enter genre">
+    <br>
+
     <button type="submit">Add Movie</button>
 </form>
 
