--- a/movie-project.html
+++ b/movie-project.html
@@ -10,7 +10,7 @@
 </head>
 <body>
 
-<h2>Movie NightS</h2>
+<h2>Movie Time</h2>
 <br>
 
 
@@ -24,12 +24,12 @@
 
 <form id="postForm">
 <!--    <label>Title:</label>-->
-    <input id="input" type="text" name="title" placeholder="Enter title">
+    <input id="input" type="text" name="title" placeholder="Enter Title">
     <br>
 <!--    <label>Rating</label>-->
-    <input id="input" type="number" name="rating" placeholder="Enter rating">
+    <input id="input" type="number" name="rating" placeholder="Enter Rating">
     <br>
-    <input id="input" type="text" name="genre" placeholder="Enter genre">
+    <input id="input" type="text" name="genre" placeholder="Enter Genre">
     <br>
 
     <button type="submit">Add Movie</button>
@@ -42,17 +42,17 @@
 <form class=" mb-5 text-center editForm">
     <label form="current-movie"></label>
     <select name="current-movie" id="current-movie">
-        <option class="dropdown" id="first-option">List of Movies</option>
+        <option class="dropdown" id="first-option">Select Movie</option>
         <option id="second-option">""</option>
         <option id="third-option">""</option>
         <option id="fourth-option">""</option>
     </select>
     <span id="movie-id"></span>
-    <label for="edited-title">Edit Title</label>
+    <label for="edited-title">Edit Title:</label>
     <input type="text" id="edited-title" name="title">
-    <label for="edit-genre">Edit Genre</label>
+    <label for="edit-genre">Edit Genre:</label>
     <input type="text" id="edit-genre" name="genre">
-    <label for="edit-rating">Edit Rating</label>
+    <label for="edit-rating">Edit Rating:</label>
     <select id="edit-rating">
         <option value="1">1</option>
         <option value="2">2</option>
