--- a/movie-project.html
+++ b/movie-project.html
@@ -11,11 +11,10 @@
 <body>
 
 <h2>Movie Time</h2>
-<br>
 
 
 
-<div class= "center loadingMessage" id="loading">
+<div class="center loadingMessage" id="loading">
     <div class="ring"></div>
     <span>Loading...</span>
 </div>
@@ -23,10 +22,10 @@
 <!--Add Movie Form-->
 
 <form id="postForm">
-<!--    <label>Title:</label>-->
+    <!--    <label>Title:</label>-->
     <input id="input" type="text" name="title" placeholder="Enter Title">
     <br>
-<!--    <label>Rating</label>-->
+    <!--    <label>Rating</label>-->
     <input id="input" type="number" name="rating" placeholder="Enter Rating">
     <br>
     <input id="input" type="text" name="genre" placeholder="Enter Genre">
@@ -34,7 +33,6 @@
 
     <button type="submit">Add Movie</button>
 </form>
-
 
 
 <!--    Edit movie data form-->
@@ -71,9 +69,14 @@
 
 
 
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe"
+        crossorigin="anonymous"></script>
 <script src="https://code.jquery.com/jquery-2.2.4.min.js"
         integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44=" crossorigin="anonymous"></script>
 <script src="movie-project.js"></script>
+
+
 </body>
+
 </html>
